test/tests/errors/error-unassigned.sm
// true
// false
// false
/*
2
*/
/*
2
*/

program {
    output x;
}